# bcompnutritiontool

./: .replit  AI_MEAL_PLANNING_OVERHAUL_SUMMARY.md  App Overview.py  CLIENT_PROFILE_EDIT_ISSUES_REPORT.md  OpenAI_Prompt_Analysis.md  ai_meal_plan_utils.py  api_status_report.py  app.py  app_simple.py  build_fdc_database.py  common_foods_database.py  diagnose_quota_issue.py  enhanced_ai_meal_planning.py  enhanced_ai_meal_planning_simple.py  fdc_api.py  fdc_database_loader.py  fdc_nutrition_database.json  final_verification.py  generate_realistic_pdf.py  intelligent_macro_optimizer.py  macro_validator.py  meal_adjuster.py  next.config.ts  ni-recipes.json  nutrition_cache.py  openai_debug.py  openai_portal_guide.md  openai_simple_test.py  openai_test_production.py  package-lock.json  package.json  pdf_export.py  precision_macro_optimizer.py  progress_summary.py  pyproject.toml  recipe_database.py  replit.md  seasonal_ingredients.py  session_manager.py  simple_effective_optimizer.py  (+27 more)
.streamlit/: config.toml
attached_assets/: 2025-07-06T19-29_export_1751830167265.csv  Pasted-Dates-Week-Week-Starting-Weight-Approximate-weight-at-the-end-of-each-week-Weekly-Change-Week-Starti-1746807701626.txt  Pasted-Dates-Week-Week-Starting-Weight-Approximate-weight-at-the-end-of-each-week-Weekly-Change-Week-Starti-1746810722800.txt  Pasted-For-the-Weekly-Schedule-page-change-the-title-of-the-Basic-Schedule-Setup-to-General-Daily-Schedule-1751819729199_1751819729200.txt  Pasted-State-INITIAL-Event-INITIALIZED-index-BqDl3eRM-js-764-New-state-PINGING-SERVER-index-BqDl3eRM-js-1749005221307.txt  (+11 more)
(+380 files in other folders)
