[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "tabulate>=0.9.0",
    "trafilatura>=2.0.0",
]
